--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 
 <body data-sveltekit-preload-data="hover">
 	<div style="display: contents">%sveltekit.body%</div>
-	<script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="bootstrap-min.js"></script>
 </body>
 
 </html>
